// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "væː kiːg fiːz væː gulh",
    },
    {
      "english": "the dogs see the wolves",
      "target": "væː dɔːgs fiː væː gulhs",
    },
    {
      "english": "i give you the bread",
      "target": "æːg æfk gu",
    },
    {
      "english": "the king walks at the river",
      "target": "væː kiːg gɔːkz æt væː riːvæːr",
    },
    {
      "english": "the king does not see the wolf",
      "target": "væː kiːg dæːt fiːz væː gulh",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "diːdiː veːdiːdiːθ dupʰuũme",
    },
    {
      "english": "the dogs see the wolves",
      "target": "hæːdiːi veːdiːdiːnʈ dupʰuiũme",
    },
    {
      "english": "i give you the bread",
      "target": "iːdoː dæːdiːo fuũme",
    },
    {
      "english": "the king walks at the river",
      "target": "diːdiː eːdθ fdudiː",
    },
    {
      "english": "the king does not see the wolf",
      "target": "diːdiː doːt veːdiːdiːθ dupʰuũme",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "sepe lūpen sūpele",
    },
    {
      "english": "the dogs see the wolves",
      "target": "sūpele lūpen sūpele",
    },
    {
      "english": "i give you the bread",
      "target": "ne peːneː sīnī",
    },
    {
      "english": "the king walks at the river",
      "target": "sepe keːpū sīsa kelū",
    },
    {
      "english": "the king does not see the wolf",
      "target": "sepe eːleː lūpen sūpele",
    },
  ],
  "preset": "tokipona",
}
`;
